[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/wiringGrid/SlotProto.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/ui/godot_icons/Sub.svg" type="Texture" id=2]
[ext_resource path="res://gfx/ui/godot_icons/Add.svg" type="Texture" id=3]
[ext_resource path="res://gfx/ui/icon_preset.svg" type="Texture" id=4]
[ext_resource path="res://ui/wiringGrid/SlotIndicator.gd" type="Script" id=5]
[ext_resource path="res://ui/wiringGrid/WiringGrid.gd" type="Script" id=7]
[ext_resource path="res://gfx/ui/godot_icons/icon_action_paste.svg" type="Texture" id=10]
[ext_resource path="res://gfx/ui/godot_icons/icon_action_copy.svg" type="Texture" id=11]

[node name="WiringGrid" type="Control"]
margin_right = 256.0
margin_bottom = 208.0
rect_min_size = Vector2( 256, 208 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotIndicator" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -32.0
rect_min_size = Vector2( 128, 128 )
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 6
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="0" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_right = 36.0
margin_bottom = 33.0

[node name="1" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 37.0
margin_right = 73.0
margin_bottom = 33.0

[node name="2" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 74.0
margin_right = 110.0
margin_bottom = 33.0

[node name="3" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 111.0
margin_right = 147.0
margin_bottom = 33.0

[node name="4" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 148.0
margin_right = 184.0
margin_bottom = 33.0

[node name="5" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 185.0
margin_right = 221.0
margin_bottom = 33.0

[node name="6" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 36.0
margin_bottom = 67.0

[node name="7" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 37.0
margin_top = 34.0
margin_right = 73.0
margin_bottom = 67.0

[node name="8" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 34.0
margin_right = 110.0
margin_bottom = 67.0

[node name="9" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 111.0
margin_top = 34.0
margin_right = 147.0
margin_bottom = 67.0

[node name="10" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 34.0
margin_right = 184.0
margin_bottom = 67.0

[node name="11" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 185.0
margin_top = 34.0
margin_right = 221.0
margin_bottom = 67.0

[node name="12" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_top = 68.0
margin_right = 36.0
margin_bottom = 101.0

[node name="13" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 37.0
margin_top = 68.0
margin_right = 73.0
margin_bottom = 101.0

[node name="14" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 68.0
margin_right = 110.0
margin_bottom = 101.0

[node name="15" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 111.0
margin_top = 68.0
margin_right = 147.0
margin_bottom = 101.0

[node name="16" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 68.0
margin_right = 184.0
margin_bottom = 101.0

[node name="17" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 185.0
margin_top = 68.0
margin_right = 221.0
margin_bottom = 101.0

[node name="18" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_top = 102.0
margin_right = 36.0
margin_bottom = 135.0

[node name="19" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 37.0
margin_top = 102.0
margin_right = 73.0
margin_bottom = 135.0

[node name="20" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 102.0
margin_right = 110.0
margin_bottom = 135.0

[node name="21" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 111.0
margin_top = 102.0
margin_right = 147.0
margin_bottom = 135.0

[node name="22" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 102.0
margin_right = 184.0
margin_bottom = 135.0

[node name="23" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 185.0
margin_top = 102.0
margin_right = 221.0
margin_bottom = 135.0

[node name="24" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_top = 136.0
margin_right = 36.0
margin_bottom = 169.0

[node name="25" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 37.0
margin_top = 136.0
margin_right = 73.0
margin_bottom = 169.0

[node name="26" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 74.0
margin_top = 136.0
margin_right = 110.0
margin_bottom = 169.0

[node name="27" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 111.0
margin_top = 136.0
margin_right = 147.0
margin_bottom = 169.0

[node name="28" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 148.0
margin_top = 136.0
margin_right = 184.0
margin_bottom = 169.0

[node name="29" parent="SlotIndicator" instance=ExtResource( 1 )]
margin_left = 185.0
margin_top = 136.0
margin_right = 221.0
margin_bottom = 169.0

[node name="30" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_top = 170.0
margin_right = 36.0
margin_bottom = 203.0
slot_type = 1

[node name="31" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 37.0
margin_top = 170.0
margin_right = 73.0
margin_bottom = 203.0
slot_type = 1

[node name="32" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 74.0
margin_top = 170.0
margin_right = 110.0
margin_bottom = 203.0
slot_type = 1

[node name="33" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 111.0
margin_top = 170.0
margin_right = 147.0
margin_bottom = 203.0
slot_type = 1

[node name="34" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 148.0
margin_top = 170.0
margin_right = 184.0
margin_bottom = 203.0
slot_type = 1

[node name="35" parent="SlotIndicator" instance=ExtResource( 1 )]
self_modulate = Color( 0, 0.5, 1, 1 )
margin_left = 185.0
margin_top = 170.0
margin_right = 221.0
margin_bottom = 203.0
slot_type = 1

[node name="Add" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 4.0
margin_bottom = 32.0
hint_tooltip = "Adds an operator to the wiring grid."
icon = ExtResource( 3 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 38.0
margin_bottom = 66.0
hint_tooltip = "Removes an operator from the wiring grid."
icon = ExtResource( 2 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preset" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.643137 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 72.0
margin_bottom = 100.0
hint_tooltip = "Sets the wiring grid to a preset algorithm."
disabled = true
icon = ExtResource( 4 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copy" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.643137 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 140.0
margin_bottom = 168.0
icon = ExtResource( 11 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paste" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.643137 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 172.0
margin_bottom = 200.0
icon = ExtResource( 10 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
editor_only = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Preset" to="." method="_on_Preset_pressed"]
[connection signal="pressed" from="Copy" to="." method="_on_Copy_pressed"]
[connection signal="pressed" from="Paste" to="." method="_on_Paste_pressed"]
